# k

./: README.md  pyproject.toml
.github/workflows/: ci.yml
k_mcp/: .env.example  README.md  __init__.py
k_mcp/app/: __init__.py  assessment.py  capability_gap.py  config.py  k_adapter.py  migration.py  policy.py  schemas.py  server.py  source_reader.py
k_mcp/tests/: __init__.py  test_assessment.py  test_capability_gap.py  test_k_adapter.py  test_migration.py  test_policy.py  test_source_reader.py
lib/: common.sh  entry.sh  find.sh  git.sh  journal.sh  resume.sh  scope.sh  setup.sh  template.sh  todo.sh
templates/: decision.md  header.md  idea.md  insight.md  problem.md  project.md  solution.md
tests/: test_cli.sh
